# lyric-talk

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/instructions/: testing.instructions.md
.github/workflows/: ci.yaml
.serena/: project.yml
.serena/memories/: ITA_corpus_analysis_pipeline_context.md  analyze_ita_corpus_update_log.md
.spec-workflow/approvals/cli-usability-improvements/: approval_1766219836780_vt781q4de.json  approval_1766241818061_3jh2ct4uo.json  approval_1766242310271_ti4e91ln0.json
.spec-workflow/approvals/ddd-onion-refactor/: approval_1765628923217_bkvo3os6d.json  approval_1765723358017_lrgch29h7.json  approval_1765726472439_d83zyuxwk.json
.spec-workflow/approvals/steering/: approval_1765607857096_455cq50xc.json  approval_1765610219146_ug940uvu1.json  approval_1766200791691_79nl3m4e9.json  (+3 more)
.spec-workflow/steering/: product.md  structure.md  tech.md
.spec-workflow/templates/: design-template.md  product-template.md  requirements-template.md  structure-template.md  tech-template.md
eval/: .env.sample  .gitignore  analyze_ita_corpus.py  collect_lyrics.py  register_lyrics_to_db.py  visualize_results.py
src/: __init__.py  config.py  lyric_index.py  main.py  matcher.py  mora.py  token_alignment.py
src/application/: __init__.py
src/interface/: __init__.py
tests/: conftest.py  test_contextual_matching.py  test_lyric_index.py  test_matcher.py  test_mora.py  test_token_alignment.py
tests/integration/: test_full_pipeline.py
(+114 files in other folders)
