[project]
name = "lyric-talk"
version = "0.1.0"
description = "歌詞から特定の文章を再現するテキストマッチングプログラム"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spacy>=3.7.0",
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "hatchling>=1.28.0",
    "fugashi>=1.5.2",
    "unidic-lite>=1.0.8",
    "ipadic>=1.0.0",
    "ollama>=0.6.1",
    "duckdb>=1.4.3",
    "typer>=0.15.0",
    "rich>=14.0.0",
]

[project.scripts]
lyric-talk = "src.interface.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
addopts = "-vv --ff --cov=src --cov-branch --cov-report=term --cov-fail-under=70 --durations=10 -n 12"
python_files = "test_*.py"
testpaths = "tests"
markers = [
    "slow: mark test as slow.",
    "integration: mark test as integration test.",
]